rename universities struct to university
